--- a/guides/integration-and-best-practices/performance-and-scalability.mdx
+++ b/guides/integration-and-best-practices/performance-and-scalability.mdx
@@ -1,205 +1,202 @@
 ---
-title: "Optimizing Test Performance and Scalability"
-description: "Best practices for writing fast and scalable test suites. This guide covers parallel execution, avoiding flaky tests, reducing overhead with mocks, and measuring test performance for large projects."
+title: "Performance and Scalability"
+description: "Strategies for speeding up test runs, managing large numbers of tests, and leveraging features like test sharding, parallel execution, and selective running to optimize developer workflows."
 ---
 
-# Optimizing Test Performance and Scalability
+# Performance and Scalability
 
-## Overview
-Efficient test suites are crucial for maintaining productivity and confidence in large-scale C++ projects. This guide provides best practices for writing fast, scalable, and reliable tests using GoogleTest and GoogleMock. By applying these strategies, you can reduce test execution time, avoid flaky tests, and leverage mocks effectively to minimize overhead.
+Optimizing test execution speed and scalability is crucial for maintaining developer productivity as your codebase and test suite grow. This guide will help you apply proven strategies using GoogleTest and GoogleMock to accelerate test runs, manage large test sets effectively, and leverage available features such as parallel execution and test sharding.
 
 ---
 
-## 1. Running Tests in Parallel
+## 1. Workflow Overview
 
-Parallel test execution maximizes use of available CPU cores, significantly reducing total runtime.
+### Task Description
+This guide helps you speed up your test execution workflow by showing how to run tests selectively, execute tests in parallel, and manage large test suites efficiently.
 
-### How to Enable Parallel Test Execution
+### Prerequisites
+- GoogleTest and GoogleMock are installed and integrated into your build system.
+- Your test binaries are built and ready to be executed.
+- Familiarity with basic GoogleTest commands and test structure (see [Writing Your First Test](https://google.github.io/googletest/guides/getting-started/writing-your-first-test)) is assumed.
 
-- Use GoogleTest's built-in support for running tests in parallel with the `--gtest_parallel` flag or external tools like `CTest` or Bazel's test runner.
+### Expected Outcome
+After following this guide, you will be able to:
+- Run a subset of tests selectively to shorten feedback cycles.
+- Use parallel and sharded test execution to reduce overall test runtime.
+- Apply best practices for organizing and scaling your tests.
 
-- Divide your tests into smaller independent units that can safely run concurrently.
+### Time Estimate
+Setting up the techniques in this guide can range from a few minutes for simple filtering to hours for integrating advanced parallelization into CI pipelines.
+
+### Difficulty Level
+Intermediate — requires command-line proficiency and some build/test environment configuration.
+
+---
+
+## 2. Step-by-Step Instructions
+
+### Step 1: Selective Test Execution to Speed up Development
+
+- **What to Do:** Use test filtering to run only relevant tests when developing or debugging.
+- **How to Do:**
+  - Use the `--gtest_filter` flag followed by a wildcard pattern to specify which tests to run.
+  - Example: Run all tests with suite names starting with `Math` and test names containing `Add`:
+    ```bash
+    ./your_test_binary --gtest_filter=Math*.*Add*
+    ```
+- **Expected Result:** Only the matching tests execute, reducing runtime drastically.
+
+> _Tip:_ Combine multiple test patterns with `:` as a separator, e.g., `--gtest_filter=FooTest.*:BarTest.BazTest`.
+
+
+### Step 2: Organize Tests for Scalability
+
+- **What to Do:** Group and organize your tests into suites that reflect code modules or features.
+- **How to Do:**
+  - Define logical test suites using consistent naming in `TEST()` or `TEST_F()`.
+  - Split large test suites into smaller focused suites.
+- **Expected Result:** Easier to select subsets and maintain tests as your codebase grows.
+
+
+### Step 3: Use Test Sharding to Distribute Tests Across Machines or Jobs
+
+- **What to Do:** Run your tests in shards (partitions) to distribute the workload.
+- **How to Do:**
+  - Use the `--gtest_total_shards` and `--gtest_shard_index` flags.
+  - Example: To split tests into 4 shards and run the 2nd shard:
+    ```bash
+    ./your_test_binary --gtest_total_shards=4 --gtest_shard_index=1
+    ```
+  - Each shard runs a different subset of tests, enabling parallelism at the job level.
+- **Expected Result:** Parallel test jobs that collectively run the entire suite, optimizing resource use.
+
+> _Note:_ Sharding requires that tests are reasonably uniformly distributed for efficient balancing.
+
+
+### Step 4: Enable Parallel Execution to Use Multiple CPU Cores
+
+- **What to Do:** Run tests in parallel on a single machine to utilize multicore systems.
+- **How to Do:**
+  - While GoogleTest itself does not provide built-in parallel test execution within a single binary, use external tools or test runners that launch multiple test binaries concurrently.
+  - For example, with CTest or Bazel, configure test jobs to run concurrently.
+  - In custom scripts, spawn multiple instances of your test binary with filters or shards.
+- **Expected Result:** Reduced wall-clock test execution time by maximizing CPU usage.
+
+> _Tip:_ Ensure tests do not share global state or depend on each other's side effects, as this can cause flaky tests when run in parallel.
+
+
+### Step 5: Minimize Test Runtime by Controlling Test Complexity
+
+- **What to Do:** Avoid heavy setup in tests where possible.
+- **How to Do:**
+  - Use `SetUp()` and `TearDown()` judiciously in test fixtures.
+  - Share expensive resources across tests when safe using static or global objects.
+  - Consider using `TEST_P` for parameterized tests rather than many similar tests.
+- **Expected Result:** Faster execution per test and reduced total test suite runtimes.
+
+
+### Step 6: Capture and Analyze Test Failures Efficiently
+
+- **What to Do:** Use failure output to speed up debugging without rerunning the full suite.
+- **How to Do:**
+  - Use `--gtest_repeat=N` to rerun failing tests multiple times for flakiness detection.
+  - Use `--gtest_break_on_failure` to halt test execution immediately upon failure for easier debugging.
+- **Expected Result:** Immediate feedback on problem tests, reducing debugging time.
+
+
+### Step 7: Automate Test Execution in CI for Consistent Performance
+
+- **What to Do:** Integrate parallel and sharded test execution into your CI pipeline.
+- **How to Do:**
+  - Configure your build system (e.g., Bazel or CMake's CTest) to run shards or parallel test jobs.
+  - Aggregate results to reflect a full pass/fail status.
+  - Monitor metrics for test runtime and failures.
+- **Expected Result:** Faster and reliable automated test feedback in your development pipeline.
+
+
+---
+
+## 3. Examples & Code Samples
+
+### Running a subset of tests using test filter:
+```bash
+./my_tests --gtest_filter=NetworkingTest.*
+```
+Only tests in the `NetworkingTest` suite run.
+
+### Running a shard (shard 0 of 3):
+```bash
+./my_tests --gtest_total_shards=3 --gtest_shard_index=0
+```
+
+### Example shell script launching parallel test shards:
+```bash
+NUM_SHARDS=4
+for i in $(seq 0 $((NUM_SHARDS - 1))); do
+    ./my_tests --gtest_total_shards=$NUM_SHARDS --gtest_shard_index=$i &
+done
+wait
+```
+
+### Using Bazel to run tests in parallel (configured in `bazel test`):
+```bash
+bazel test --jobs=8 //myproject/...
+```
+
+---
+
+## 4. Troubleshooting & Tips
+
+### Common Issues
+- **Tests failing when run in parallel**:
+  - Ensure tests do not depend on shared mutable global state.
+  - Use proper synchronization or redesign tests for isolation.
+
+- **Uneven test shard runtimes**:
+  - Try adjusting shard counts.
+  - Group tests by estimated runtime if possible.
+
+- **Test runner crashes with repeated runs**:
+  - Check for resource leaks.
+  - Isolate crashing tests and fix.
 
 ### Best Practices
+- Regularly refactor and split large test suites.
+- Use parameterized tests to reduce duplicate code.
+- Integrate timing metrics to identify slow tests.
+- Consider using `GTEST_FLAG` environment variables for fine control.
 
-- Ensure tests are independent and do not share mutable global state.
-- Avoid writing tests that depend on external resources in ways that cause contention.
-- Structure resource setup and teardown to prevent race conditions.
+### Performance Considerations
+- Avoid excessive logging in performance-critical situations.
+- Use `EXPECT_*` versus `ASSERT_*` appropriately to avoid premature test stops.
+- Cache expensive test fixture setups.
 
-### Verifying Parallel Safety
+### Alternative Approaches
+- Use third-party test runners or build tools to orchestrate parallel test execution if more advanced scheduling is needed.
 
-- Run tests multiple times with parallelism enabled and monitor for flaky behavior.
-- Use synchronization primitives in your test when accessing shared data.
+---
+
+## 5. Next Steps & Related Content
+
+- **What's Next**: Explore these guides to solidify your test infrastructure:
+  - [Integrating with Build Systems](https://google.github.io/googletest/guides/integration-and-best-practices/integrating-with-build-systems)
+  - [Continuous Integration & Test Automation](https://google.github.io/googletest/guides/integration-and-best-practices/continuous-integration-automation)
+  - [Mocking Techniques and Patterns](https://google.github.io/googletest/guides/core-workflows/mocking-techniques-and-patterns)
+
+- **Related Guides**:
+  - Writing Your First Test and Mock
+  - Using Assertions and Matchers
+  - Parameterized and Typed Tests
+
+- **Resources**:
+  - Official [GoogleTest Primer](https://google.github.io/googletest/primer.html)
+  - [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+  - [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+
+---
 
 <Tip>
-Running tests in parallel reduces total test suite time but requires well-isolated tests to avoid flaky failures.
+For large or complex test suites, invest time in organizing test suites and employing sharding and parallelization early on. This pays dividends with faster feedback and more stable testing workflows.
 </Tip>
 
 ---
-
-## 2. Avoiding Flaky Tests
-
-Flaky tests undermine trust and cause wasted developer time.
-
-### Common Causes of Flakiness
-
-- Timing and concurrency issues
-- Uninitialized or shared global state
-- Reliance on external services or unstable resources
-- Randomized inputs without control or logging
-
-### Strategies to Prevent Flakiness
-
-- Use mocks and fakes instead of real network, databases, or file systems when testing logic.
-- Isolate each test case with fresh fixture setups.
-- Favor deterministic inputs and explicit seeds when random values are necessary.
-- Use GoogleMock's strictness controls to catch unexpected calls early.
-
-### Diagnosing Flaky Tests
-
-- Run tests repeatedly and under different environments.
-- Use verbose logging (`--gtest_repeat`, `--gmock_verbose=info`) to trace unexpected behavior.
-
-<Warning>
-Avoid suppressing uninteresting call warnings in mocks unless you are confident no unexpected calls occur.
-</Warning>
-
----
-
-## 3. Reducing Overhead with Mocks
-
-Mock objects help isolate tested units and reduce dependencies on costly or unstable components.
-
-### Best Practices for Using Mocks Efficiently
-
-- Define mocks only for interfaces your code depends on, minimizing scope.
-- Prefer `ON_CALL()` to set default behaviors and only use `EXPECT_CALL()` when verifying invocation.
-- Use `NiceMock<>` to suppress warnings related to uninteresting calls when appropriate.
-- Keep mocks lightweight; avoid unnecessarily complex expectations and actions.
-- Delegate to fakes or real objects if mocking complex functionalities is too burdensome.
-
-### Example: Setting Default Actions with ON_CALL
-
-```cpp
-using ::testing::Return;
-...
-ON_CALL(mock_object, Method(_))
-    .WillByDefault(Return(default_value));
-```
-
-### Example: Preventing Excessive Expectations
-
-```cpp
-EXPECT_CALL(mock_object, ProcessData(_))
-    .Times(AtMost(5))
-    .WillRepeatedly(Return(true));
-```
-
-### Avoiding Compilation and Runtime Costs
-
-- Factor out mock constructors/destructors definitions into `.cc` files to reduce compile-time.
-- Prefer light-weight mock actions instead of complex chained actions.
-
----
-
-## 4. Measuring and Monitoring Test Performance
-
-Understanding your test suite's performance is essential for optimization.
-
-### Tools and Techniques
-
-- Use built-in test timers or external profiling tools to identify slow tests.
-- Enable GoogleTest's XML output and use CI dashboards for test duration tracking.
-- Profile tests when running in parallel to detect contention or resource bottlenecks.
-
-### Practical Steps
-
-- Add timers in fixtures or test bodies to measure execution time of critical sections.
-- Log or fail tests exceeding thresholds to prevent regressions.
-
----
-
-## 5. Additional Tips and Best Practices
-
-### Writing Tests for Large Projects
-
-- Group tests logically by component or feature to enable selective execution.
-- Use GoogleTest filters (`--gtest_filter`) to focus on subsets during development.
-- Continuously refactor tests to keep them maintainable and performant.
-
-### Using GoogleMock Strictness Controls
-
-- Use `StrictMock<>` when you want to enforce strict call expectations.
-- Use `NiceMock<>` for less noisy tests but still validating expectations.
-- Avoid mixing strictness levels to reduce complexity.
-
-### Managing Expectations and Default Actions
-
-- Set expectations before exercising code to avoid undefined behavior.
-- Use `.RetiresOnSaturation()` on `EXPECT_CALL()` to prevent unintended double matches.
-
-### Common Pitfalls
-
-- Expecting order without sequences or `InSequence` can cause confusing failures.
-- Over-specifying arguments leads to brittle tests.
-- Failing to mock virtual destructors can result in memory leaks detected as failures.
-
-<Warning>
-Always mock destructors virtual to ensure proper cleanup and prevent subtle runtime errors.
-</Warning>
-
----
-
-## Summary Diagram of Optimizations
-
-```mermaid
-flowchart TD
-  Start([Start Testing]) --> Prepare[Prepare isolated test units]
-  Prepare --> DefineMocks[Define lightweight mock classes]
-  DefineMocks --> SetDefaults[Use ON_CALL to set default behaviors]
-  SetDefaults --> SetExpectations[Set strict EXPECT_CALLs only when needed]
-  SetExpectations --> ParallelExecution[Run tests in parallel]
-  ParallelExecution --> Monitor[Measure test performance and monitor flaky tests]
-  Monitor --> FixFlakiness[Address flaky tests via mocking and isolation]
-  FixFlakiness --> End([Optimized Test Suite])
-
-  classDef process fill:#bbf,stroke:#333,stroke-width:2px;
-  class Prepare,DefineMocks,SetDefaults,SetExpectations,ParallelExecution,Monitor,FixFlakiness process;
-```
-
----
-
-## Troubleshooting
-
-### Mock Methods Not Called as Expected
-
-- Verify the method being mocked is `virtual`. Non-virtual methods are not intercepted unless using advanced techniques.
-- Ensure expectations are set **before** the method calls.
-- Use `--gmock_verbose=info` to get detailed traces of mock calls and matched expectations.
-
-### Unwanted Warnings About Uninteresting Calls
-
-- Confirm whether the mock should ignore calls (`NiceMock<>`) or fail on unexpected calls (`StrictMock<>`).
-- If calls occur without `EXPECT_CALL`, define default actions with `ON_CALL` or catch-all `EXPECT_CALL` with `Times(AnyNumber())`.
-
-### Slow Compilation of Mocks
-
-- Move mock class constructors and destructors out of header files.
-- Reduce the number of mocked methods in a single mock class.
-
-### Heapcheck Failures
-
-- Ensure base classes have virtual destructors to avoid incomplete destruction of derived objects.
-
----
-
-## Next Steps & Related Content
-
-- Explore [Using Mocks in Tests](https://google.github.io/googletest/guides/core-testing-workflows/using-mocks-in-tests.html) for deeper understanding of mocks.
-- Review [Mock Strictness Controls](https://google.github.io/googletest/api/gmock_cook_book.html#NiceStrictNaggy) to master mock behavior control.
-- Consult [Troubleshooting Common Issues](https://google.github.io/googletest/getting-started/first-steps/troubleshooting.html) for resolving build and execution problems.
-- Integrate with your build system using instructions from [Build System Integration](https://google.github.io/googletest/guides/integration-and-best-practices/build-system-integration.html).
-
-<Tip>
-Regularly profile and monitor your test suite as it grows to maintain efficiency and reliability.
-</Tip>
